--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prettier": "^2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -23,7 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-styled-components": "^1.13.3",
-    "eslint": "^8.1.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-next": "12.0.1",
     "eslint-config-prettier": "^8.3.0",
