--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prettier": "^2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-spring": "^9.3.0",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
   },
